# anoncreds-rs

./: .gitignore  :w  Cargo.lock.android  Cargo.toml  Cross.toml  MAINTAINERS.md  Package.swift  README.md  SECURITY.md  build-universal.sh  build-xcframework.sh  build.sh
anoncred-kmm/anoncred-wrapper-rust/: .gitignore  Cargo.toml  build.gradle.kts  build.rs
anoncred-kmm/anoncred-wrapper-rust/.cargo/: config.toml
anoncred-kmm/uniffi-kmm/: Cargo.toml  askama.toml  build.gradle.kts
anoncred-kmm/uniffi-kmm/src/: lib.rs
anoncred-kmm/uniffi-kmm/src/androidMain/kotlin/: Pointer.kt  RustCallStatusJvm.kt
anoncred-kmm/uniffi-kmm/src/commonMain/kotlin/: Disposable.kt  FFIObject.kt  FfiConverter.kt  FfiConverterBoolean.kt  FfiConverterByte.kt  FfiConverterCallbackInterface.kt  FfiConverterDouble.kt  FfiConverterDuration.kt  FfiConverterFloat.kt  FfiConverterInstant.kt  FfiConverterInt.kt  FfiConverterLong.kt  FfiConverterRustBuffer.kt  FfiConverterShort.kt  FfiConverterString.kt  FfiConverterUByte.kt  FfiConverterUInt.kt  FfiConverterULong.kt  FfiConverterUShort.kt  ForeignBytes.kt  ForeignCallback.kt  InternalException.kt  Pointer.kt  RustBuffer.kt  RustCallStatus.kt  rustCall.kt
anoncred-kmm/uniffi-kmm/src/gen_kotlin_multiplatform/: callback_interface.rs  compounds.rs  miscellany.rs  mod.rs  primitives.rs
anoncred-kmm/uniffi-kmm/src/jvmMain/kotlin/: ForeignBytes.kt  ForeignCallbackJvm.kt
anoncred-kmm/uniffi-kmm/src/nativeInterop/cinterop/: uniffi.def
anoncred-kmm/uniffi-kmm/src/nativeMain/kotlin/: ForeignCallback.kt  Pointer.kt
anoncred-kmm/uniffi-kmm/src/templates/: helpers.j2
anoncred-kmm/uniffi-kmm/src/templates/android/: CallbackInterfaceTemplate.kt.j2  UniFFILibTemplate.kt.j2
anoncred-kmm/uniffi-kmm/src/templates/common/: CallbackInterfaceTemplate.kt.j2  CustomTypeTemplate.kt.j2  EnumTemplate.kt.j2  ErrorTemplate.kt.j2  MapTemplate.kt.j2  ObjectTemplate.kt.j2  OptionalTemplate.kt.j2  RecordTemplate.kt.j2  SequenceTemplate.kt.j2  TopLevelFunctionsTemplate.kt.j2  UniFFILibTemplate.kt.j2
anoncred-kmm/uniffi-kmm/src/templates/headers/: BridgingHeaderTemplate.h.j2
anoncred-kmm/uniffi-kmm/src/templates/jvm/: RustBufferTemplate.kt.j2  UniFFILibTemplate.kt.j2
anoncred-kmm/uniffi-kmm/src/templates/native/: CallbackInterfaceTemplate.kt.j2  ForeignBytesTemplate.kt.j2  RustBufferTemplate.kt.j2  RustCallStatusTemplate.kt.j2  UniFFILibTemplate.kt.j2
anoncreds/: Cargo.toml
anoncreds/src/: error.rs  lib.rs
anoncreds/src/data_types/: cred_offer.rs  mod.rs  pres_request.rs
anoncreds/src/data_types/anoncreds/: cred_def.rs  cred_offer.rs  cred_request.rs  credential.rs  issuer_id.rs  macros.rs  master_secret.rs  mod.rs  nonce.rs  pres_request.rs  presentation.rs  rev_reg.rs  rev_reg_def.rs  rich_schema.rs  schema.rs
anoncreds/src/data_types/identifiers/: cred_def.rs  mod.rs  rev_reg.rs  rich_schema.rs  schema.rs
anoncreds/src/data_types/merkle_tree/: merkletree.rs  mod.rs  proof.rs  tree.rs
anoncreds/src/ffi/: cred_def.rs  cred_offer.rs  cred_req.rs  credential.rs  error.rs  master_secret.rs  mod.rs  object.rs  pres_req.rs  presentation.rs  revocation.rs  schema.rs
anoncreds/src/services/: helpers.rs  issuer.rs  mod.rs  prover.rs  tails.rs  types.rs  verifier.rs
anoncreds/src/utils/: base58.rs  error.rs  hash.rs  macros.rs  mod.rs  validation.rs
anoncreds/tests/: anoncreds_demos.rs  multiple-credentials.rs
anoncreds/tests/utils/: anoncreds.rs  mock.rs  mod.rs
indy-credx/: Cargo.toml
indy-credx/src/: error.rs  lib.rs
indy-credx/src/ffi/: cred.rs  cred_def.rs  cred_offer.rs  cred_req.rs  credential.rs  error.rs  macros.rs  master_secret.rs  mod.rs  object.rs  pres_req.rs  presentation.rs  revocation.rs  schema.rs  util.rs
indy-credx/src/services/: helpers.rs  issuer.rs  mod.rs  prover.rs  tails.rs  types.rs  verifier.rs
indy-credx/tests/utils/: anoncreds.rs  mod.rs
indy-data-types/: Cargo.toml
indy-data-types/src/: embed_json.rs  lib.rs  macros.rs
indy-data-types/src/anoncreds/: cred_def.rs  cred_offer.rs  cred_request.rs  credential.rs  macros.rs  master_secret.rs  mod.rs  nonce.rs  pres_request.rs  presentation.rs  rev_reg.rs  rev_reg_def.rs  rich_schema.rs  schema.rs
indy-data-types/src/anoncreds/cl/: nonce.rs
indy-data-types/src/anoncreds/cl_compat/: bignum.rs  credential.rs  groupelt.rs  macros.rs  mod.rs  point.rs  proof.rs  revocation.rs
indy-data-types/src/anoncreds/ursa_cl/: mod.rs
indy-data-types/src/common/: did.rs  verkey.rs
indy-data-types/src/compat/: bignum.rs  credential.rs  groupelt.rs  mod.rs  point.rs  proof.rs  revocation.rs
indy-data-types/src/identifiers/: cred_def.rs  mod.rs  rev_reg.rs  rich_schema.rs  schema.rs
indy-data-types/src/merkle_tree/: merkletree.rs  mod.rs  proof.rs  tree.rs
indy-test-utils/: Cargo.toml
indy-test-utils/src/: environment.rs  genesis.rs  lib.rs
indy-utils/: Cargo.toml
indy-utils/src/: base58.rs  base64.rs  did.rs  ed25519.rs  error.rs  hash.rs  keys.rs  lib.rs  macros.rs  qualifiable.rs  qualifier.rs  query.rs  random.rs  txn_signature.rs  types.rs  validation.rs  wallet_key.rs  wql.rs
indy-utils/src/keys/: mod.rs  types.rs
indy-utils/src/pack/: alg.rs  mod.rs  nacl_box.rs  types.rs
indy-wql/: Cargo.toml
indy-wql/src/: lib.rs
src/: lib.rs  (+2 more)
uniffi/: Cargo.toml  Cross.toml  Readme.md  build-release-apple-universal.sh  build-release-linux.sh  build.rs
uniffi/output-frameworks/anoncreds-jvm/: build.gradle.kts  settings.gradle.kts
uniffi/output-frameworks/anoncreds-swift/: Package.swift
uniffi/src/: anoncreds.swift  anoncreds.udl  anoncreds.udl.backup  anoncredsFFI.h  anoncredsFFI.modulemap  lib.rs
uniffi/src/issuer/: mod.rs
uniffi/src/prover/: mod.rs
uniffi/src/types/: cred_def.rs  cred_offer.rs  cred_req.rs  credential.rs  custom_types.rs  error.rs  link_secret.rs  mod.rs  nonce.rs  presentation.rs  rev_reg_def.rs  rev_status_list.rs
uniffi/src/verifier/: mod.rs
wrappers/javascript/anoncreds-react-native/android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
wrappers/javascript/react-native/android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
(+403 files in other folders)
