[package]
name = "anoncreds"
version = "0.1.0-dev.3"
authors = ["Hyperledger AnonCreds Contributors <anoncreds@lists.hyperledger.org>"]
description = "Verifiable credential issuance and presentation for Hyperledger AnonCreds (https://www.hyperledger.org/projects), which provides a foundation for self-sovereign identity."
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/hyperledger/anoncreds-rs/"
categories = ["authentication", "cryptography"]
keywords = ["hyperledger", "ssi", "verifiable", "credentials"]

[lib]
name = "anoncreds"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib", "cdylib"]

[features]
default = ["ffi"]
ffi = ["ffi-support", "logger", "zeroize"]
logger = ["env_logger"]
vendored = ["openssl", "openssl/vendored"]

[dependencies]
bs58 = "0.4"
env_logger = { version = "0.9.3", optional = true }
ffi-support = { version = "0.4.0", optional = true }
log = "0.4"
once_cell = "1.9"
rand = "0.8.5"
regex = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
bitvec = { version = "1.0.1", features = ["serde"] }
serde_json = { version = "1.0", features = ["raw_value"]}
sha2 = "0.10"
tempfile = "3.1.0"
thiserror = "1.0"
ursa = { version = "=0.3.6", default-features = false, features = ["cl_native", "serde"] }
zeroize = { version = "1.3", optional = true, features = ["zeroize_derive"] }

# We add the openssl dependency here because ursa does not expose a vendored openssl feature
# Since we use "cl_native" as a feature, which uses openssl, we can add a vendored build with 
# the new exposed "vendored" feature
openssl = { version = "0.10", optional = true }

[profile.release]
lto = true
codegen-units = 1

# We override the dependency on openssl-src with the latest from `git` as this adds a build
# target for `aarch64-apple-ios-sim`. Once this is released, we can depend on the latest from
# crates.io
[patch.crates-io]
openssl-src = { git = "https://github.com/alexcrichton/openssl-src-rs", branch = "release/111" }
