[package]
name = "anoncreds"
version = "0.2.3"
authors = [
    "Hyperledger AnonCreds Contributors <anoncreds@lists.hyperledger.org>",
]
description = "Verifiable credential issuance and presentation for Hyperledger AnonCreds (https://www.hyperledger.org/projects), which provides a foundation for self-sovereign identity."
edition = "2024"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/hyperledger/anoncreds-rs/"
categories = ["authentication", "cryptography"]
keywords = ["hyperledger", "ssi", "verifiable", "credentials"]
rust-version = "1.85"

[lib]
name = "anoncreds"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib", "cdylib"]

[features]
default = ["ffi", "logger", "zeroize", "w3c"]
ffi = ["dep:ffi-support"]
logger = ["dep:env_logger"]
vendored = ["anoncreds-clsignatures/openssl_vendored"]
w3c = ["dep:base64", "dep:chrono", "dep:rmp-serde"]
zeroize = ["dep:zeroize"]

[dependencies]
anoncreds-clsignatures = "0.3.2"
base64 = { version = "0.22", optional = true }
bitvec = { version = "1.0.1", features = ["serde"] }
bs58 = "0.5.0"
chrono = { version = "0.4.31", optional = true, features = ["serde"] }
env_logger = { version = "0.11", optional = true }
ffi-support = { version = "0.4.0", optional = true }
log = "0.4.17"
once_cell = "1"
rand = "0.9"
regex = "1.7.1"
rmp-serde = { version = "1.1.2", optional = true }
serde = { version = "1.0.155", features = ["derive"] }
serde_json = { version = "1.0.94", features = ["raw_value"] }
sha2 = "0.10.6"
thiserror = "2"
zeroize = { version = "1.5.7", optional = true, features = ["zeroize_derive"] }

[dev-dependencies]
rstest = "0.26"

[profile.release]
codegen-units = 1
lto = true
strip = "debuginfo"
