[package]
name = "anoncreds"
version = "0.3.1"
authors = ["Hyperledger AnonCreds Contributors <anoncreds@lists.hyperledger.org>"]
description = "Verifiable credential issuance and presentation for Hyperledger AnonCreds (https://www.hyperledger.org/projects), which provides a foundation for self-sovereign identity."
edition = "2018"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/hyperledger/anoncreds-rs/"
categories = ["authentication", "cryptography"]
keywords = ["hyperledger", "ssi", "verifiable", "credentials"]

[lib]
name = "anoncreds"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib", "cdylib"]

[features]
default = ["ffi"]
ffi = ["ffi-support", "logger", "zeroize"]
logger = ["env_logger"]
vendored = ["openssl", "openssl/vendored"]
merkle_tree = ["indy-utils/hash", "hex"]

[dependencies]
env_logger = { version = "0.9.3", optional = true }
ffi-support = { version = "0.4.0", optional = true }
log = "0.4"
once_cell = "1.9"
rand = "0.8.5"
regex = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"]}
sha2 = "0.10"
tempfile = "3.1.0"
thiserror = "1.0"
ursa = { version = "=0.3.6", default-features = false, features = ["cl_native", "serde"] }
zeroize = { version = "1.3", optional = true, features = ["zeroize_derive"] }
hex = { version = "0.4", optional = true }
openssl = { version = "0.10", optional = true }


[dependencies.indy-utils]
version = "0.5"
path = "../indy-utils"
default-features = false
features = ["query", "hash"]
