[package]
name = "indy-credx"
version = "0.2.0"
authors = ["Hyperledger Indy Contributors <hyperledger-indy@lists.hyperledger.org>"]
edition = "2018"

description = ""
license = "MIT/Apache-2.0"

[lib]
name = "indy_credx"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib", "cdylib"]

[features]
default = ["ffi"]
ffi = []

[dependencies]
log = "0.4.8"
once_cell = "1.4"
rand = "0.7"
regex = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.1.0"
thiserror = "1.0.9"

[dependencies.indy-data-types]
version = "0.4"
path = "../indy-data-types"
features = ["cl_native"]

[dependencies.indy-utils]
version = "0.3"
path = "../indy-utils"
default-features = false
features = ["wql"]

[dependencies.ursa]
version = "0.3.5"
default-features = false
features = ["cl_native", "log", "serde"]
