[package]
name = "indy-credx"
version = "0.3.0"
authors = ["Hyperledger Indy Contributors <indy@lists.hyperledger.org>"]
description = "Verifiable credential issuance and presentation for Hyperledger Indy (https://www.hyperledger.org/projects), which provides a distributed-ledger-based foundation for self-sovereign identity (https://sovrin.org)."
edition = "2018"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/hyperledger/indy-shared-rs/"
categories = ["authentication", "cryptography"]
keywords = ["hyperledger", "indy", "ssi", "verifiable", "credentials"]

[lib]
name = "indy_credx"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib", "cdylib"]

[features]
default = ["ffi"]
ffi = ["ffi-support", "logger", "zeroize"]
logger = ["env_logger"]
vendored = ["indy-data-types/vendored"]

[dependencies]
env_logger = { version = "0.7.1", optional = true }
ffi-support = { version = "0.4.0", optional = true }
log = "0.4.8"
once_cell = "1.4"
rand = "0.7"
regex = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
tempfile = "3.1.0"
thiserror = "1.0.9"
zeroize = { version = "1.1", optional = true }

[dependencies.indy-data-types]
version = "0.5"
path = "../indy-data-types"
features = ["cl_native"]

[dependencies.indy-utils]
version = "0.4"
path = "../indy-utils"
default-features = false
features = ["wql"]
