[package]
name = "indy-data-types"
version = "0.3.0"
authors = ["Hyperledger Indy Contributors <hyperledger-indy@lists.hyperledger.org>"]
edition = "2018"

description = "This is the official SDK for Hyperledger Indy (https://www.hyperledger.org/projects), which provides a distributed-ledger-based foundation for self-sovereign identity (https://sovrin.org). The major artifact of the SDK is a c-callable library."
license = "MIT/Apache-2.0"

[lib]
name = "indy_data_types"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = ["serde_support"]
cl = ["indy-utils/cl"]
cl_native = ["indy-utils/cl_native"]
hash = ["indy-utils/hash"]
merkle_tree = ["hash"]
rich_schema = []
serde_support = ["indy-utils/serde_support", "serde_json"]

[dependencies]
lazy_static = "1.4"
regex = "1.3"
serde_json = { version = "1.0", optional = true, features = ["raw_value"] }

[dependencies.indy-utils]
version = "0.3"
path = "../indy-utils"
default-features = false
features = ["wql"]

[dev-dependencies]
hex = "0.4"
serde_json = "1.0"
