[package]
name = "indy-data-types"
version = "0.4.1"
authors = ["Hyperledger Indy Contributors <indy@lists.hyperledger.org>"]
description = "Common data types for Hyperledger Indy (https://www.hyperledger.org/projects), which provides a distributed-ledger-based foundation for self-sovereign identity (https://sovrin.org)."
edition = "2018"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/bcgov/indy-shared-rs/"
categories = ["authentication", "cryptography"]
keywords = ["hyperledger", "indy", "ssi", "verifiable", "credentials"]

[lib]
name = "indy_data_types"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = ["merkle_tree", "serde_support"]
cl = ["indy-utils/cl", "serde_support"]
cl_native = ["indy-utils/cl_native", "serde_support"]
hash = ["indy-utils/hash"]
merkle_tree = ["hash"]
rich_schema = []
serde_support = ["indy-utils/serde_support", "serde", "serde_json"]

[dependencies]
once_cell = "1.4"
regex = "1.3"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true, features = ["raw_value"] }
zeroize = "1.1"

[dependencies.indy-utils]
version = "0.3"
path = "../indy-utils"
default-features = false
features = ["wql"]

[dev-dependencies]
hex = "0.4"
serde_json = "1.0"
