[package]
name = "indy-test-utils"
version = "0.1.0"
authors = ["Hyperledger Indy Contributors <hyperledger-indy@lists.hyperledger.org>"]
edition = "2018"

description = "This is the official SDK for Hyperledger Indy (https://www.hyperledger.org/projects), which provides a distributed-ledger-based foundation for self-sovereign identity (https://sovrin.org). The major artifact of the SDK is a c-callable library."
license = "MIT/Apache-2.0"

[lib]
name = "indy_test"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = []

[dependencies]
tempfile = "3.1"
