[package]
name = "indy-utils"
version = "0.3.8"
authors = ["Hyperledger Indy Contributors <indy@lists.hyperledger.org>"]
description = "Utilities for Hyperledger Indy (https://www.hyperledger.org/projects), which provides a distributed-ledger-based foundation for self-sovereign identity (https://sovrin.org)."
edition = "2018"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/bcgov/indy-shared-rs/"
categories = ["authentication", "cryptography"]
keywords = ["hyperledger", "indy", "ssi", "verifiable", "credentials"]

[lib]
name = "indy_utils"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = ["ed25519", "hash", "pack", "txn_signature", "wql"]
base64 = ["base64_rs"]
cl = ["ursa", "ursa/cl"]
cl_native = ["ursa", "ursa/cl_native"]
ed25519 = ["ursa", "ursa/ed25519", "ursa/x25519"]
hash = ["ursa", "ursa/sha2"]
pack = ["base64", "chacha20poly1305", "crypto_box", "ed25519", "serde_support", "ursa", "ursa/blake2"]
serde_support = ["serde", "serde_json", "ursa/serde"]
txn_signature = ["hash", "serde_support"]
wql = []

[dependencies]
aead = "0.3"
base64_rs = { package = "base64", version = "0.12", optional = true }
bs58 = "0.3"
chacha20 = "0.6"
chacha20poly1305 = { version = "0.7", default-features = false, features = ["alloc", "chacha20"], optional = true }
crypto_box = { version = "0.2", optional = true }
hex = "0.4"
once_cell = "1.4"
rand = "0.7"
regex = "1.3"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
tempfile = { version = "3.1", optional = true }
thiserror = "1.0"
ursa = { version = "0.3.5", default-features = false, optional = true }
zeroize = { version = "1.1", features = ["zeroize_derive"] }

[dev-dependencies]
async-global-executor = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
