[package]
name = "indy-utils"
version = "0.4.0"
authors = ["Hyperledger Indy Contributors <indy@lists.hyperledger.org>"]
description = "Utilities for Hyperledger Indy (https://www.hyperledger.org/projects), which provides a distributed-ledger-based foundation for self-sovereign identity (https://sovrin.org)."
edition = "2018"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/hyperledger/indy-shared-rs/"
categories = ["authentication", "cryptography"]
keywords = ["hyperledger", "indy", "ssi", "verifiable", "credentials"]

[lib]
name = "indy_utils"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = ["ed25519", "hash", "txn_signature", "wql"]
base64 = ["base64_rs"]
ed25519 = ["ursa", "ursa/ed25519", "ursa/x25519"]
hash = ["sha2"]
txn_signature = ["hex", "sha2", "serde", "serde_json"]
wql = ["indy-wql", "serde", "serde_json"]

[dependencies]
aead = "0.3"
base64_rs = { package = "base64", version = "0.12", optional = true }
bs58 = "0.3"
hex = { version = "0.4", optional = true }
indy-wql = { version = "0.4", optional = true, path = "../indy-wql" }
once_cell = "1.4"
regex = "1.3"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
sha2 = { version = "0.9", optional = true }
thiserror = "1.0"
ursa = { version = "0.3.5", default-features = false, optional = true }
zeroize = { version = "1.1" }

[dev-dependencies]
async-global-executor = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
