[package]
name = "indy-utils"
version = "0.5.1"
authors = ["Hyperledger Indy Contributors <indy@lists.hyperledger.org>"]
description = "Utilities for Hyperledger Indy (https://www.hyperledger.org/projects), which provides a distributed-ledger-based foundation for self-sovereign identity (https://sovrin.org)."
edition = "2018"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/hyperledger/indy-shared-rs/"
categories = ["authentication", "cryptography"]
keywords = ["hyperledger", "indy", "ssi", "verifiable", "credentials"]

[lib]
name = "indy_utils"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = ["ed25519", "hash", "txn_signature", "wql"]
base64 = ["base64_rs"]
ed25519 = ["curve25519-dalek", "ed25519-dalek", "rand", "sha2", "x25519-dalek"]
hash = ["sha2"]
txn_signature = ["hex", "sha2", "serde", "serde_json"]
wql = ["indy-wql", "serde", "serde_json"]

[dependencies]
base64_rs = { package = "base64", version = "0.13", optional = true }
bs58 = "0.4"
curve25519-dalek = { version = "3.1", default-features = false, features = ["u64_backend"], optional = true }
ed25519-dalek = { version = "1.0", default-features = false, features = ["u64_backend"], optional = true }
hex = { version = "0.4", optional = true }
indy-wql = { version = "0.4", optional = true, path = "../indy-wql" }
once_cell = "1.9"
rand = { version = "0.8", optional = true }
regex = "1.3"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
sha2 = { version = "0.10", optional = true }
thiserror = "1.0"
x25519-dalek = { version = "=1.2", default-features = false, features = ["u64_backend"], optional = true }
zeroize = { version = "1.3" }

[dev-dependencies]
async-global-executor = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
