[package]
name = "indy-wql"
version = "0.4.0"
authors = ["Hyperledger Indy Contributors <indy@lists.hyperledger.org>"]
description = "Utilities for Hyperledger Indy (https://www.hyperledger.org/projects), which provides a distributed-ledger-based foundation for self-sovereign identity (https://sovrin.org)."
edition = "2018"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/hyperledger/indy-shared-rs/"
categories = ["authentication", "cryptography"]
keywords = ["hyperledger", "indy", "ssi", "verifiable", "credentials"]

[lib]
name = "indy_wql"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = ["serde_support"]
serde_support = ["serde", "serde_json"]

[dependencies]
serde = { version = "1.0", optional = true, default-features = false }
serde_json = { version = "1.0", optional = true, default-features = false }

[dev-dependencies]
rand = "0.8"
serde_json = "1.0"
