[package]
name = 'anoncreds-uniffi'
version = '0.0.1'
authors = ['Goncalo Frade <goncalo.frade@iohk.io>']
edition = '2018'
description = 'FFI wrapper for Anoncreds'
license = 'Apache-2.0'

[lib]
crate-type = [
  'cdylib',
  'staticlib'
]
name = "anoncreds_uniffi"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies.anoncreds_core]
path = '..'
package = "anoncreds"
features = ["vendored"]

[dependencies]
uniffi = { version = "0.24.3" }
lazy_static = "1.3"
futures = { version = "0.3.17", features = ["thread-pool"] }
num_cpus = "1.8.0"
async-trait = '0.1'
serde = { version = "1.0", features = ["derive"] }
serde_json = '1.0'
swift-bridge = "0.1.51"
ursa = { version = "0.3.7", default-features = false, features = ["cl_native", "serde"] }
thiserror = "1.0.30"

[dev-dependencies.tokio]
version = '1.9'
features = [
    'rt',
    'macros',
]

[build-dependencies]
uniffi = { version = "0.24.3", features = [ "build", "cli" ] }
swift-bridge-build = "0.1.51"